# pubsubman

./: Cargo.toml  README.md  check.sh  docker-compose.yaml  rust-toolchain
.github/workflows/: rust.yml
pubsubman/: Cargo.toml
pubsubman/src/: actions.rs  app.rs  column_settings.rs  exit_state.rs  lib.rs  main.rs  notifications.rs  settings.rs
pubsubman/src/ui/: json_ui.rs  messages_view.rs  mod.rs  modal.rs  publish_view.rs  selected_message.rs  topic_name.rs  validity_frame.rs
pubsubman/src/ui/publish_view/: attributes.rs  attributes_form.rs  mod.rs
pubsubman_backend/: Cargo.toml
pubsubman_backend/src/: lib.rs  message.rs  pubsub_message.rs
pubsubman_backend/src/model/: mod.rs  pubsub_message.rs  pubsub_message_to_publish.rs
pubsubman_gui/: Cargo.toml  index.html
pubsubman_gui/assets/: sw.js
pubsubman_gui/src/: actions.rs  app.rs  column_settings.rs  exit_state.rs  lib.rs  main.rs  save_state.rs  settings.rs  subscription.rs  topic.rs
pubsubman_gui/src/ui/: messages_view.rs  mod.rs  modal.rs  publish_panel.rs  publish_view.rs  topic_name.rs  topic_view.rs
