[workspace]
members = ["pubsubman", "pubsubman_backend"]

[workspace.dependencies]
chrono = { version = "0.4.26", features = ["clock", "serde"] }
eframe = { version = "0.22.0", default-features = false, features = [
  "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
  "default_fonts", # Embed the default egui fonts.
  "glow",          # Use the glow rendering backend. Alternative: "wgpu".
  "persistence",   # Enable restoring app state when restarting the app.
] }
egui = "0.22.0"
egui_extras = "0.22.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.104"
tokio = { version = "1.29.1", features = ["full"] }
tokio-util = "0.7.8"

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2

[patch.crates-io]
eframe = { git = "https://github.com/emilk/egui", rev = "23ce4e7" }
egui = { git = "https://github.com/emilk/egui", rev = "23ce4e7" }
egui_extras = { git = "https://github.com/emilk/egui", rev = "23ce4e7" }
