[workspace]
members = ["pubsubman", "pubsubman_backend"]
resolver = "3"

[workspace.dependencies]
chrono = { version = "0.4.26", features = ["clock", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.104"
tokio = { version = "1.29.1", features = ["full"] }
tokio-util = "0.7.8"

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
