[package]
name = "pubsubman"
version = "0.1.0"
authors = ["Duncan MacKinnon <dmackdev@gmail.com>"]
edition = "2021"
rust-version = "1.71"

[dependencies]
chrono = { workspace = true }
clap = { version = "4.4.0", features = ["derive"] }
eframe = { workspace = true }
egui = { workspace = true }
egui-notify = "0.9.0"
egui_extras = { workspace = true }
egui_json_tree = { git = "https://github.com/dmackdev/egui_json_tree", branch = "master" }
env_logger = "0.10"
log = "0.4"
pubsubman_backend = { version = "0.1.0", path = "../pubsubman_backend" }
serde = { workspace = true }
serde_json = "1.0.104"
tokio = { workspace = true }
tokio-util = { workspace = true }
