[package]
name = "pubsubman"
version = "0.1.0"
authors = ["Duncan MacKinnon <dmackdev@gmail.com>"]
edition = "2021"

[dependencies]
chrono = { workspace = true }
clap = { version = "4.4.0", features = ["derive"] }
eframe = { version = "0.24", default-features = false, features = [
  "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
  "default_fonts", # Embed the default egui fonts.
  "glow",          # Use the glow rendering backend. Alternative: "wgpu".
  "persistence",   # Enable restoring app state when restarting the app.
] }
egui = "0.24"
egui-notify = "0.11.0"
egui_json_tree = "0.2.0"
env_logger = "0.10"
log = "0.4"
pubsubman_backend = { version = "0.1.0", path = "../pubsubman_backend" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
