[package]
name = "pubsubman_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.28"
google-cloud-pubsub = "0.18.0"
time = "0.3.24"
tokio = { workspace = true }

[dependencies.uuid]
version = "1.4.1"
features = [
  "v4",                # Lets you generate random UUIDs
  "fast-rng",          # Use a faster (but still sufficiently random) RNG
  "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
