[package]
name = "pubsubman_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { workspace = true }
futures = "0.3.28"
futures-util = "0.3.28"
google-cloud-gax = "0.15.0"
google-cloud-googleapis = "0.11.0"
google-cloud-pubsub = "0.20.0"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = "1.0.48"
tokio = { workspace = true }
tokio-util = { workspace = true }

[dependencies.uuid]
version = "1.4.1"
features = [
  "v4",                # Lets you generate random UUIDs
  "fast-rng",          # Use a faster (but still sufficiently random) RNG
  "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
