[package]
name = "pubsubman_gui"
version = "0.1.0"
authors = ["Duncan MacKinnon <dmackdev@gmail.com>"]
edition = "2021"
rust-version = "1.71"


[dependencies]
chrono = { workspace = true }
egui = "0.22.0"
egui_extras = "0.22.0"
eframe = { version = "0.22.0", default-features = false, features = [
  "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
  "default_fonts", # Embed the default egui fonts.
  "glow",          # Use the glow rendering backend. Alternative: "wgpu".
  "persistence",   # Enable restoring app state when restarting the app.
] }
log = "0.4"

# You only need serde if you want app persistence:
serde = { version = "1", features = ["derive"] }

env_logger = "0.10"
tokio = { workspace = true }
tokio-util = { workspace = true }
pubsubman_backend = { version = "0.1.0", path = "../pubsubman_backend" }
