[package]
name = "pubsubman_gui"
version = "0.1.0"
authors = ["Duncan MacKinnon <dmackdev@gmail.com>"]
edition = "2021"
rust-version = "1.71"


[dependencies]
chrono = { workspace = true }
egui = { git = "https://github.com/emilk/egui", rev = "481f448" }
egui_extras = { git = "https://github.com/emilk/egui", rev = "481f448" }
eframe = { git = "https://github.com/emilk/egui", rev = "481f448", default-features = false, features = [
  "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
  "default_fonts", # Embed the default egui fonts.
  "glow",          # Use the glow rendering backend. Alternative: "wgpu".
  "persistence",   # Enable restoring app state when restarting the app.
] }
egui_json_tree = { path = "../../egui_json_tree" }
log = "0.4"

serde = { workspace = true }

env_logger = "0.10"
tokio = { workspace = true }
tokio-util = { workspace = true }
pubsubman_backend = { version = "0.1.0", path = "../pubsubman_backend" }
serde_json = "1.0.104"
